k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sms-dev
  labels:
    project: social-media-scheduler
